--- a/common/header.html
+++ b/common/header.html
@@ -34,8 +34,8 @@
     </div>
     <!-- end head -->
     <div class="user-tab">
-        <input type="button" value="예약하기" onclick="location.href='/reservation_main'">
-        <input type="button" value="예약현황">
+        <input type="button" value="예약하기" onclick="location.href='reservation_main.html'">
+        <input type="button" value="예약현황" onclick="location.href='mypage_reservation_status.html'">
     </div>
     <!-- end user-tab -->
     <div class="inner-line">
