--- a/common/header.html
+++ b/common/header.html
@@ -1,6 +1,6 @@
 <div class="inner-wrap">
     <button class="m-menu"><img src="img/m_menu.png" alt=""></button>
-    <a class="logo" href="/">
+    <a class="logo" href="index.html">
         <img src="img/logo.svg" alt="">
     </a>
     <nav class="gnb-menu">
